--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chalk": "^2.4.1",
+    "dotenv": "^6.0.0",
     "koa": "^2.5.2",
+    "koa-404-handler": "0.0.2",
+    "koa-better-error-handler": "^1.3.5",
     "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.0",
     "koa-passport": "^4.1.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.8.2",
     "passport-local": "^1.0.0",
     "pg": "^7.4.3",
-    "sequelize": "^5.0.0-beta.10",
-    "koa-session": "^5.8.2"
+    "sequelize": "^5.0.0-beta.10"
   },
   "devDependencies": {
     "ava": "^0.25.0",
